Fix "Build Action: Resource" resource loading. Fix crash when accessing list from multiple threads.

--- a/x360ce.App.Beta/Controls/PadItem_General_XboxImageControl.xaml
+++ b/x360ce.App.Beta/Controls/PadItem_General_XboxImageControl.xaml
@@ -63,13 +63,13 @@
 					x:Name="TopPictureImage"
 					Width="256"
 					Height="103"
-					Source="/x360ce;component/Images/xboxControllerTop.png" />
+					Source="../Images/xboxControllerTop.png" />
 				<StackPanel Height="8" />
 				<Image
 					x:Name="FrontPictureImage"
 					Width="256"
 					Height="175"
-					Source="/x360ce;component/Images/xboxControllerFront.png" />
+					Source="../Images/xboxControllerFront.png" />
 			</StackPanel>
 			<Grid
 				x:Name="TriggerButtonsGrid"
