--- a/x360ce.App.Beta/Controls/PadFootControl.xaml
+++ b/x360ce.App.Beta/Controls/PadFootControl.xaml
@@ -6,6 +6,7 @@
 	xmlns:local="clr-namespace:x360ce.App.Controls"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	MinWidth="740"
+	Unloaded="UserControl_Unloaded"
 	mc:Ignorable="d">
 	<Grid>
 		<StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
