--- a/x360ce.App.Beta/Controls/PadItemControl.xaml
+++ b/x360ce.App.Beta/Controls/PadItemControl.xaml
@@ -12,43 +12,43 @@
 			<local:PadItem_GeneralControl x:Name="GeneralPanel" />
 		</TabItem>
 		<TabItem Name="AdvancedTabPage" Header="Advanced">
-			<local:PadItem_AdvancedControl x:Name="AdvancedPanel" Height="{Binding Path=ActualHeight, ElementName=GeneralPanel}" />
+			<local:PadItem_AdvancedControl x:Name="AdvancedPanel" Height="{Binding Path=ActualHeight, ElementName=GeneralPanel, Mode=OneWay}" />
 		</TabItem>
 		<TabItem Name="ButtonsTabPage" Header="Buttons">
-			<local:PadItem_ButtonsControl x:Name="ButtonsPanel" Height="{Binding Path=ActualHeight, ElementName=GeneralPanel}" />
+			<local:PadItem_ButtonsControl x:Name="ButtonsPanel" Height="{Binding Path=ActualHeight, ElementName=GeneralPanel, Mode=OneWay}" />
 		</TabItem>
 		<TabItem Name="DPadTabPage" Header="D-Pad">
-			<local:PadItem_DPadControl x:Name="DPadPanel" Height="{Binding Path=ActualHeight, ElementName=GeneralPanel}" />
+			<local:PadItem_DPadControl x:Name="DPadPanel" Height="{Binding Path=ActualHeight, ElementName=GeneralPanel, Mode=OneWay}" />
 		</TabItem>
 		<TabItem Name="TRiggersTabPage" Header="Triggers">
-			<StackPanel Height="{Binding Path=ActualHeight, ElementName=GeneralPanel}" Orientation="Vertical">
+			<StackPanel Height="{Binding Path=ActualHeight, ElementName=GeneralPanel, Mode=OneWay}" Orientation="Vertical">
 				<local:AxisMapControl x:Name="LeftTriggerPanel" x:FieldModifier="public" />
 				<local:AxisMapControl x:Name="RightTriggerPanel" x:FieldModifier="public" />
 			</StackPanel>
 		</TabItem>
 		<TabItem Name="LeftThumbTabPage" Header="Left Thumb">
-			<StackPanel Height="{Binding Path=ActualHeight, ElementName=GeneralPanel}" Orientation="Vertical">
+			<StackPanel Height="{Binding Path=ActualHeight, ElementName=GeneralPanel, Mode=OneWay}" Orientation="Vertical">
 				<local:AxisMapControl x:Name="LeftThumbXPanel" x:FieldModifier="public" />
 				<local:AxisMapControl x:Name="LeftThumbYPanel" x:FieldModifier="public" />
 			</StackPanel>
 		</TabItem>
 		<TabItem Name="RightThumbTabPage" Header="Right Thumb">
-			<StackPanel Height="{Binding Path=ActualHeight, ElementName=GeneralPanel}" Orientation="Vertical">
+			<StackPanel Height="{Binding Path=ActualHeight, ElementName=GeneralPanel, Mode=OneWay}" Orientation="Vertical">
 				<local:AxisMapControl x:Name="RightThumbXPanel" x:FieldModifier="public" />
 				<local:AxisMapControl x:Name="RightThumbYPanel" x:FieldModifier="public" />
 			</StackPanel>
 		</TabItem>
 		<TabItem Name="ForceFeedbackTabPage" Header="Force Feedback">
-			<local:PadItem_ForceFeedbackControl x:Name="ForceFeedbackPanel" Height="{Binding Path=ActualHeight, ElementName=GeneralPanel}" />
+			<local:PadItem_ForceFeedbackControl x:Name="ForceFeedbackPanel" Height="{Binding Path=ActualHeight, ElementName=GeneralPanel, Mode=OneWay}" />
 		</TabItem>
 		<TabItem Name="MacrosTabPage" Header="Macros">
-			<local:PadItem_MacrosControl x:Name="MacrosPanel" Height="{Binding Path=ActualHeight, ElementName=GeneralPanel}" />
+			<local:PadItem_MacrosControl x:Name="MacrosPanel" Height="{Binding Path=ActualHeight, ElementName=GeneralPanel, Mode=OneWay}" />
 		</TabItem>
 		<TabItem Name="XInputTabPage" Header="XInput">
-			<local:PadItem_XInputControl x:Name="XInputPanel" Height="{Binding Path=ActualHeight, ElementName=GeneralPanel}" />
+			<local:PadItem_XInputControl x:Name="XInputPanel" Height="{Binding Path=ActualHeight, ElementName=GeneralPanel, Mode=OneWay}" />
 		</TabItem>
 		<TabItem Name="DInputTabPage" Header="DInput">
-			<local:PadItem_DInputControl x:Name="DInputPanel" Height="{Binding Path=ActualHeight, ElementName=GeneralPanel}" />
+			<local:PadItem_DInputControl x:Name="DInputPanel" Height="{Binding Path=ActualHeight, ElementName=GeneralPanel, Mode=OneWay}" />
 		</TabItem>
 	</TabControl>
 </UserControl>
