--- a/x360ce.App.Beta/Controls/PadItem_MacrosControl.xaml
+++ b/x360ce.App.Beta/Controls/PadItem_MacrosControl.xaml
@@ -10,6 +10,7 @@
 	d:DesignWidth="640"
 	Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"
 	Loaded="UserControl_Loaded"
+	Unloaded="UserControl_Unloaded"
 	mc:Ignorable="d">
 	<Grid>
 		<Grid.RowDefinitions>
