Fixing Unloading/Disposing: Removing instance links which prevents unloading of forms and controls.

--- a/x360ce.App.Beta/Controls/DebugControl.xaml
+++ b/x360ce.App.Beta/Controls/DebugControl.xaml
@@ -6,6 +6,7 @@
 	xmlns:local="clr-namespace:x360ce.App.Controls"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"
+	Unloaded="UserControl_Unloaded"
 	mc:Ignorable="d">
 	<GroupBox>
 		<GroupBox.Header>
