--- a/x360ce.App.Beta/Controls/PadListControl.xaml
+++ b/x360ce.App.Beta/Controls/PadListControl.xaml
@@ -9,6 +9,7 @@
 	d:DesignHeight="120"
 	d:DesignWidth="640"
 	Loaded="UserControl_Loaded"
+	Unloaded="UserControl_Unloaded"
 	mc:Ignorable="d">
 	<Grid VerticalAlignment="Stretch">
 		<Grid.RowDefinitions>
