--- a/x360ce.App.Beta/Controls/PresetsControl.xaml
+++ b/x360ce.App.Beta/Controls/PresetsControl.xaml
@@ -7,6 +7,7 @@
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	d:DesignHeight="450"
 	d:DesignWidth="800"
+	Unloaded="UserControl_Unloaded"
 	mc:Ignorable="d">
 	<Grid>
 		<TabControl
