--- a/x360ce.App.Beta/Controls/PresetsListControl.xaml
+++ b/x360ce.App.Beta/Controls/PresetsListControl.xaml
@@ -8,6 +8,7 @@
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	d:DesignHeight="120"
 	d:DesignWidth="480"
+	Unloaded="UserControl_Unloaded"
 	mc:Ignorable="d">
 	<Grid VerticalAlignment="Stretch">
 		<Grid.RowDefinitions>
