--- a/x360ce.App.Beta/Controls/BaseWithHeaderControl.xaml
+++ b/x360ce.App.Beta/Controls/BaseWithHeaderControl.xaml
@@ -9,6 +9,7 @@
 	MinHeight="160"
 	HorizontalAlignment="Stretch"
 	VerticalAlignment="Stretch"
+	Unloaded="UserControl_Unloaded"
 	mc:Ignorable="d">
 	<Grid>
 		<Grid.RowDefinitions>
