--- a/x360ce.App.Beta/Controls/AxisMapControl.xaml
+++ b/x360ce.App.Beta/Controls/AxisMapControl.xaml
@@ -7,6 +7,7 @@
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
 	Loaded="UserControl_Loaded"
+	Unloaded="UserControl_Unloaded"
 	mc:Ignorable="d">
 	<UserControl.Resources>
 		<ResourceDictionary>
