--- a/x360ce.App.Beta/Controls/PadItem_ForceFeedbackControl.xaml
+++ b/x360ce.App.Beta/Controls/PadItem_ForceFeedbackControl.xaml
@@ -8,6 +8,7 @@
 	xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
 	d:DesignHeight="500"
 	d:DesignWidth="800"
+	Unloaded="UserControl_Unloaded"
 	mc:Ignorable="d">
 	<Grid>
 		<Grid.ColumnDefinitions>
