Fixing Unloading/Disposing: Removing instance links which prevents unloading of forms and controls.

--- a/x360ce.App.Beta/Controls/PadItem_DInputControl.xaml
+++ b/x360ce.App.Beta/Controls/PadItem_DInputControl.xaml
@@ -6,6 +6,7 @@
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	d:DesignHeight="300"
 	d:DesignWidth="740"
+	Unloaded="UserControl_Unloaded"
 	mc:Ignorable="d">
 	<Grid Margin="3,3,3,3">
 		<Grid.RowDefinitions>
