--- a/x360ce.App.Beta/Controls/BaseWithHeaderControl.xaml
+++ b/x360ce.App.Beta/Controls/BaseWithHeaderControl.xaml
@@ -2,6 +2,7 @@
 	x:Class="x360ce.App.Controls.BaseWithHeaderControl"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:JcControls="clr-namespace:JocysCom.ClassLibrary.Controls;assembly=x360ce.Engine"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	Width="auto"
@@ -17,58 +18,7 @@
 			<RowDefinition Height="*" />
 			<RowDefinition Height="Auto" />
 		</Grid.RowDefinitions>
-		<Grid Grid.Row="0" Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}">
-			<Grid.RowDefinitions>
-				<RowDefinition Height="Auto" />
-				<RowDefinition Height="Auto" />
-				<RowDefinition Height="*" />
-			</Grid.RowDefinitions>
-			<Grid.ColumnDefinitions>
-				<ColumnDefinition Width="Auto" />
-				<ColumnDefinition Width="*" />
-				<ColumnDefinition Width="Auto" />
-			</Grid.ColumnDefinitions>
-			<Label
-				Name="HelpHeadLabel"
-				Grid.Row="0"
-				Grid.Column="0"
-				Grid.ColumnSpan="2"
-				Margin="8,3,3,3"
-				Padding="0"
-				Content="Head"
-				FontWeight="Bold" />
-			<ContentControl
-				Name="LeftIcon"
-				Grid.Row="1"
-				Grid.Column="0"
-				Width="24"
-				Height="24"
-				Margin="8,0,3,3"
-				Padding="0"
-				Content="{StaticResource Icon_information}"
-				Style="{StaticResource ButtonContentControl}" />
-			<TextBlock
-				Name="HelpBodyLabel"
-				Grid.Row="1"
-				Grid.Column="1"
-				Margin="3,0,3,3"
-				Padding="0"
-				VerticalAlignment="Top"
-				Text="Body"
-				TextWrapping="Wrap" />
-			<ContentControl
-				Name="RightIcon"
-				Grid.Row="0"
-				Grid.RowSpan="2"
-				Grid.Column="2"
-				Width="48"
-				Height="48"
-				Margin="4,4,8,4"
-				Padding="0"
-				Content="{StaticResource Icon_Save}"
-				Style="{StaticResource ButtonContentControl}" />
-
-		</Grid>
+		<JcControls:InfoControl Name="InfoPanel" Grid.Row="0" RightIconContent="{StaticResource Icon_Save}" />
 		<Border
 			Grid.Row="1"
 			Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
