--- a/x360ce.App.Beta/Controls/OptionsVirtualDeviceControl.xaml
+++ b/x360ce.App.Beta/Controls/OptionsVirtualDeviceControl.xaml
@@ -9,6 +9,7 @@
 	d:DesignWidth="800"
 	Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"
 	Loaded="UserControl_Loaded"
+	Unloaded="UserControl_Unloaded"
 	mc:Ignorable="d">
 	<Grid>
 		<Grid.RowDefinitions>
