--- a/x360ce.App.Beta/MainBodyControl.xaml
+++ b/x360ce.App.Beta/MainBodyControl.xaml
@@ -11,7 +11,7 @@
 	Loaded="UserControl_Loaded"
 	Unloaded="UserControl_Unloaded"
 	mc:Ignorable="d">
-	<TabControl Name="MainTabControl">
+	<TabControl Name="MainTabControl" SelectionChanged="MainTabControl_SelectionChanged">
 		<TabItem Name="Pad1TabPage">
 			<TabItem.Header>
 				<StackPanel Orientation="Horizontal">
