Add dispose test on Debug control. For some reason XAML controls are not garbage collecting.

--- a/x360ce.App.Beta/Forms/DebugWindow.xaml
+++ b/x360ce.App.Beta/Forms/DebugWindow.xaml
@@ -8,6 +8,6 @@
 	Title="X360CE - Debug"
 	Closing="Window_Closing"
 	SizeToContent="WidthAndHeight"
-	mc:Ignorable="d">
+	mc:Ignorable="d" Height="277.584">
 	<controls:DebugControl />
 </Window>
