--- a/x360ce.App.Beta/Controls/DebugControl.xaml
+++ b/x360ce.App.Beta/Controls/DebugControl.xaml
@@ -2,9 +2,12 @@
 	x:Class="x360ce.App.Controls.DebugControl"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:JcControls="clr-namespace:JocysCom.ClassLibrary.Controls;assembly=x360ce.Engine"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:local="clr-namespace:x360ce.App.Controls"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	MinWidth="420"
+	MinHeight="320"
 	Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"
 	Unloaded="UserControl_Unloaded"
 	mc:Ignorable="d">
@@ -19,7 +22,9 @@
 				<RowDefinition Height="auto" />
 				<RowDefinition Height="auto" />
 				<RowDefinition Height="auto" />
+				<RowDefinition Height="auto" />
 				<RowDefinition Height="*" />
+				<RowDefinition Height="auto" />
 			</Grid.RowDefinitions>
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition />
@@ -94,20 +99,34 @@
 					<Label Content="Cleanup Devices" Style="{StaticResource ButtonLabel}" />
 				</StackPanel>
 			</Button>
+			<Button
+				Name="TestDisposeButton"
+				Grid.Row="5"
+				Grid.Column="1"
+				MinWidth="75"
+				Margin="4,2,4,2"
+				Click="TestDisposeButton_Click"
+				Style="{StaticResource ToolBarButton}">
+				<StackPanel Style="{StaticResource ButtonStackPanel}">
+					<ContentControl Content="{StaticResource Icon_broom}" Style="{StaticResource ButtonContentControl}" />
+					<Label Content="Test Dispose" Style="{StaticResource ButtonLabel}" />
+				</StackPanel>
+			</Button>
 			<TextBox
 				Name="LogTextBox"
-				Grid.Row="5"
+				Grid.Row="6"
 				Grid.Column="0"
 				Grid.ColumnSpan="2"
-				MinHeight="24"
+				MinHeight="48"
 				Margin="4"
 				Padding="0"
 				HorizontalAlignment="Stretch"
 				VerticalAlignment="Stretch"
 				IsReadOnly="True"
-				ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+				ScrollViewer.HorizontalScrollBarVisibility="Auto"
 				ScrollViewer.VerticalScrollBarVisibility="Auto"
 				TextWrapping="Wrap" />
+			<JcControls:ProgressBarControl Name="ProgressBarPanel" Grid.Row="7" Grid.ColumnSpan="2" />
 		</Grid>
 	</GroupBox>
 </UserControl>
