--- a/x360ce.App.Beta/Controls/LogControl.xaml
+++ b/x360ce.App.Beta/Controls/LogControl.xaml
@@ -7,6 +7,7 @@
 	xmlns:local="clr-namespace:x360ce.App.Controls"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	d:DesignHeight="120"
+	Loaded="UserControl_Loaded"
 	Unloaded="UserControl_Unloaded"
 	d:DesignWidth="480"
 	mc:Ignorable="d">
